# solarops-ai

./: .env.example  .gitignore  DEVELOPER_GUIDE.md  Makefile  README.md  TASKS.md  WINDOWS_TASKS.md  architecture.md  build.bat  build.ps1  copilot-instructions.md  data_schema.md  docker-compose-chromadb.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: TASKS.md  TECH_STACK.md  architecture.md  commands.md  copilot-instructions.md
agents/anomaly_agent/: agent.py  detector.py  features.py
agents/forecasting_agent/: agent.py  inference.py  model.py  train.py
agents/hitl_agent/: approval_logic.py  escalation_rules.py
agents/orchestrator/: graph.py  router.py  state.py
agents/rca_agent/: agent.py  prompt_templates.py  reasoning.py
agents/shared/: llm_client.py  schemas.py  state.py
agents/weather_agent/: agent.py  prompts.py  tools.py
backend/app/: main.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_ml.py
configs/: agent_config.yaml  app_config.yaml  model_config.yaml
docs/: agent_design.md  domain_overview.md  failure_modes.md
infra/docker/: backend.Dockerfile  streamlit.Dockerfile
infra/kubernetes/: deployment.yaml
infra/nginx/: nginx.conf
infra/terraform/: main.tf
prompts/: optimization.md  root_cause.md
scripts/: load_data.ps1  load_data.sh  run_backend.ps1  run_backend.sh  run_streamlit.ps1  run_streamlit.sh  train_models.ps1  train_models.sh
streamlit_app/: app.py
workflows/: anomaly_response_graph.py  daily_operations_graph.py  maintenance_flow_graph.py  state_definitions.py
(+70 files in other folders)
